--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/sistema.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.JTattoo-1.6.11.jar=C:\\Users\\ivan\\Documents\\JAVA\\Librerias\\Look And Feel\\JTattoo-1.6.11.jar
+file.reference.postgresql-42.2.2.jar=C:\\Users\\ivan\\Downloads\\postgresql-42.2.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.JTattoo-1.6.11.jar}
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.postgresql-42.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
